# translate_from_pdf

./: .env.example  .gitignore  LICENSE  README.md  pdf-url-to-zh-pdf.md  pyproject.toml  start_windows.bat  start_windows.ps1  start_wsl.sh
docs/: configuration.md
pdf_translate/: __init__.py  cli.py  config.py  downloader.py  errors.py  extractor.py  markdown_translate.py  marker_adapter.py  math_preserve.py  ocr.py  pipeline.py  segmenter.py  structure.py  text_normalize.py  translator.py  types.py  web.py
tests/: conftest.py  test_cli.py  test_config.py  test_downloader.py  test_e2e_live.py  test_extractor.py  test_integration_offline.py  test_markdown_pipeline.py  test_marker_adapter.py  test_math_preserve.py  test_ocr.py  test_pipeline.py  test_pipeline_file_mode.py  test_segmenter.py  test_structure.py  test_text_normalize.py  test_translator.py  test_web_jobs.py
