[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translate"
version = "0.1.0"
description = "Translate PDF content into zh-CN markdown with configurable LLM backends"
requires-python = ">=3.8"
dependencies = [
  "flask>=3.0",
  "httpx>=0.27",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "pymupdf>=1.24",
  "pillow>=10.0",
  "pytesseract>=0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.22",
]

[project.scripts]
pdf-translate = "pdf_translate.cli:main"

[tool.setuptools.packages.find]
include = ["pdf_translate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "e2e_live: live network/API end-to-end checks",
]
